# clean-code-python

./: .pre-commit-config.yaml  pyproject.toml
src/: main.py
src/args/: args.py
tests/args/: test_args.py
